--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
+# CUSTOM
+/test-resources
+
+# MAVEN
+# Compiled bytecode
+/target/
+
+# IDE-specific files (IntelliJ IDEA or Eclipse)
+/.idea/
+*.iml
+/.classpath
+/.project
+/.settings/
+
+# Log files
+*.log
+
+# Backup files
+*~
+
+# Other ignored files
+*.bak
+*.swp
+*.swo
+*.tmp
+*.temp
+
+# OS-specific files
+.DS_Store  # macOS
+Thumbs.db  # Windows
+
+
+# JAVA GIT TEMPLATE
 # Compiled class file
 *.class
 
