Feature: Basic Functionality for Excel Financial Settlement Processing
- Implemented core capability to process two Excel files and produce financial settlements.

- All necessary classes and elements for this functionality have been developed.

- Pending: portions of FinancialTools.java and other classes may require refactoring due to expedited development.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # CUSTOM
+# test files
 /test-resources
+# legacy code / experiments
+/src/main/java/xyz/lfmrad/clinitools/wip
 
 # MAVEN
 # Compiled bytecode
