Added logic to support custom user-defined payment methods for varying grammatical input

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -52,7 +52,7 @@
         "cashPayment": "Efectivo",
         "cardPayment": "Tarjeta",
         "bizumPayment": "Bizum",
-        "financingInstallment": "Financiación",
+        "financingInstallment": "Financiacion",
         "numberOfClients": "Número de clientes: ",
         "summaryHeading": "*** TOTALES ***",
         "totalPVP": "Total PVP: ",
